--- a/cs3220_2025f/requirements.txt
+++ b/cs3220_2025f/requirements.txt
@@ -27,7 +27,7 @@ MarkupSafe==3.0.2
 matplotlib==3.10.5
 matplotlib-inline==0.1.7
 narwhals==2.1.2
-networkx
+networkx==3.5
 numpy==2.3.2
 packaging==25.0
 pandas==2.3.1
@@ -60,4 +60,5 @@ tzdata==2025.2
 urllib3==2.5.0
 watchdog==6.0.0
 wcwidth==0.2.13
+networkx==3.5
 
