--- a/cs3220_2025f/requirements.txt
+++ b/cs3220_2025f/requirements.txt
@@ -1,4 +1,4 @@
-﻿altair==5.5.0
+altair==5.5.0
 asttokens==3.0.0
 attrs==25.3.0
 blinker==1.9.0
@@ -60,5 +60,3 @@ tzdata==2025.2
 urllib3==2.5.0
 watchdog==6.0.0
 wcwidth==0.2.13
-networkx==3.5
-
